# usagedash

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/usagedash-cli/: Cargo.toml
crates/usagedash-cli/src/: main.rs
crates/usagedash-core/: Cargo.toml
crates/usagedash-core/src/: config.rs  lib.rs  models.rs  snapshot.rs
crates/usagedash-core/src/providers/: claude.rs  codex.rs  gemini.rs  mod.rs
crates/usagedash-install/: Cargo.toml
crates/usagedash-install/src/: main.rs
crates/usagedash-tray/: Cargo.toml
crates/usagedash-tray/src/: main.rs
scripts/: install-tray.ps1  install.sh
src/usagedash/: __main__.py  app.py  cli.py  config.py  models.py  snapshot.py
src/usagedash/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/usagedash/tray/: __init__.py  bridge.py  windows_tray.py
src/usagedash/ui/: __init__.py  theme.py  widgets.py
tests/: test_cli.py  test_models.py  test_providers_claude.py  test_providers_codex.py  test_snapshot.py
tests/fixtures/: claude_stats_sample.json  codex_history_sample.jsonl
