[workspace]
members = [
  "crates/usagedash-core",
  "crates/usagedash-cli",
  "crates/usagedash-tray",
  "crates/usagedash-install"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Adwitiya"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
