[package]
name = "usagedash-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "usagedash"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usagedash-core = { path = "../usagedash-core" }
