[package]
name = "usagedash-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "usagedash-tray"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
usagedash-core = { path = "../usagedash-core" }

[target.'cfg(windows)'.dependencies]
tray-item = "0.10"
